# dmenuinfo

./: CMakeLists.txt  Makefile  README.md  install.sh  main.c
